--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "useref": "^1.4.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
