--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13",
+    "unique-names-generator": "^4.7.1",
     "useref": "^1.4.4"
   },
   "devDependencies": {
