--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@tensorflow/tfjs": "^4.22.0",
+    "chart.js": "^4.4.6",
     "lodash.debounce": "^4.0.8",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.13",
