--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@tensorflow/tfjs": "^4.22.0",
     "chart.js": "^4.4.6",
+    "decision-tree": "^0.3.7",
     "lodash.debounce": "^4.0.8",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
